initial generation of server stubs from swagger
